fin-59 build fix